feat: agregar lógica para obtener resumen por fecha y actualizar esquemas de API
